Correcting responsive errors

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <div class="padded-welcome">
             <div class="text-center slidetext">
                 <h1> Welcome To Agrow Farm Official Website</h1>
-                <button class="btn btn-lg btn-warning"><a href="pages/what-we-do.html">Explore</a></button>
+                <button class="btn btn-lg btn-warning"><a style="text-decoration: none; color: black;" href="pages/what-we-do.html">Explore</a></button>
             </div>
         </div>
     </div>
 
-    <div class="container row col-12 order-sect p-5 m-0">
+    <div class="container row col-12 w-100 order-sect p-xl-5 m-auto p-sm-0">
         <div class=" mt-auto mb-auto wrapper col-lg-5 col-md-12 col-sm-12">
             <h3 class="text-capitalize">Intrested in any of our services or products <span
                     style="font-size: larger;">?</span></h3>
@@ -63,21 +63,20 @@
                 <a id="order-btn" href="pages/sub-page/order-page.html"
                     class="btn w-30 mt-2 btn-lg btn-warning text-capitalize">Get
                     in touch</a>
+                    <hr>
             </div>
         </div>
-        <div class="col-lg-7 col-md-12 col-sm-12 pt-lg-0 pt-md-0 pt-sm-4">
+        <div class="col-lg-7 col-md-12 col-sm-12 pt-lg-0 pt-md-0 pt-sm-4 ">
             <h3 class="text text-center mt-sm-4 mt-md-0 mt-lg-0 recent">Recent Article</h3>
             <div class="container flex-md-wrap flex-sm-wrap mt-4">
-                <div class="container row flex-md-nowrap">
-                    <div class="col-lg-4 col-md-3 ">
-                        <img class="art-img" width="190px" src="assets/images/image/image-1.jpg" alt="">
+                <div class="flex-xl-row row pro-mob m-auto">
+                    <div class="col-lg-3 col-md-5">
+                        <img width="170px" id="home-art-img" src="../assets/images/image/image-1.jpg" alt="">
                     </div>
-                    <div class="text col-lg-8 col-md-9 ml-lg-2 text-wrap">
+                    <div class="col-lg-9 col-md-7 pl-xl-5 pl-lg-3 mobPadding">
                         <h5 class=" text-capitalize ">How to get the best harvest every year </h5>
-                        <h6>
-                            Author: <span class="article-info author"> </span> <span class="article-info date"></span>
-                        </h6>
-                        <p class="text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatum
+                        <h6>Author: <span class="article-info author "> </span> <span class="article-info date"></span></h6>
+                        <p class=" text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatum
                             repudiandae quod amet,
                             similique numquam, eveniet iste blanditiis nesciunt debitis fugiat? Molestias libero eaque
                             porro
@@ -88,24 +87,26 @@
                             Sed quo iste commodi fuga. <a href="#" class="article-info">Continue reading ...</a></p>
                     </div>
                 </div>
+
                 <div class="wrapper">
                     <a href="pages/article.html" class="btn btn-warning"> Explor More</a>
                 </div>
+                <hr>
             </div>
         </div>
     </div>
 
-    <div class=" pb-5 pt-5 card w-100">
+    <div class=" pb-5 pt-5 card w-100 testmon">
         <h3 class="text text-center">Testmonials</h3>
-        <div class="container row testmonial m-auto pt-5 pb-5">
-            <button id="left-click"><i class="fas fa-caret-left"></i></button>
-            <div class="review container col">
+        <div class="container row m-auto pt-3 pb-3">
+            <i class="fas fa-caret-left btn mt-auto mb-auto" style="font-size: 60px;" id="left-click"></i>
+            <div class="review container testmonial col">
                 <div class="wrapper m-auto slide-wrap">
                     <p class="review-text text text-center" id="review-text"></p>
                     <p class="user text-center text" id="user"></p>
                 </div>
             </div>
-            <button id="right-click"><i class="fas fa-caret-right "></i></button>
+            <i class="fas fa-caret-right mt-auto mb-auto btn" style="font-size: 60px;" id="right-click"></i>
         </div>
     </div>
 
