--- a/pages/about.html
+++ b/pages/about.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="Core Values mt-3 pb-3">
-            <h3 class="text-center">Vision</h3>
+            <h3 class="text-center">Core Values</h3>
             <p style="font-size: 13;">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam similique aut blanditiis magnam, ab
                 natus aliquid non vel dolore fuga provident dolorum facilis molestias soluta unde. Neque voluptas autem
