--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
     </div>
 
     <section class="about-section">
-        <div class="vision mt-5">
+        <div class="vision pt-5">
             <h3 class="text-center">Vision</h3>
             <p style="font-size: 13;">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eveniet impedit minima dolorum unde
