--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container flex-md-wrap flex-sm-wrap mt-4">
                 <div class="flex-xl-row row pro-mob m-auto">
                     <div class="col-lg-3 col-md-5">
-                        <img width="170px" id="home-art-img" src="../assets/images/image/image-1.jpg" alt="">
+                        <img width="170px" id="home-art-img" src="assets/images/image/image-1.jpg" alt="">
                     </div>
                     <div class="col-lg-9 col-md-7 pl-xl-5 pl-lg-3 mobPadding">
                         <h5 class=" text-capitalize ">How to get the best harvest every year </h5>
